# rust_games

./: .gitignore  Cargo.toml
alphaothello_gui/: Cargo.toml
alphaothello_gui/src/: main.rs  othello_druid.rs
alphazero/: Cargo.toml
alphazero/src/: az_player.rs  lib.rs  mcts.rs  nn.rs  train.rs
alphazero_train/: Cargo.toml
alphazero_train/src/: games_list.rs  get_train_examples.rs  main.rs  self_play.rs  test_new.rs  train_utils.rs
games/: Cargo.toml
games/src/: connect4.rs  leaderboard.rs  lib.rs  main.rs  othello.rs  tictactoe.rs
games/src/games/: othello.rs
games/src/players/: alphazero.rs  corners.rs  greedy.rs  mod.rs  random.rs
human_play/: Cargo.toml
human_play/src/: main.rs
main/: Cargo.toml  test.safetensors
main/src/: leaderboard.rs  lib.rs  main.rs
players/: Cargo.toml
players/src/: alphazero.rs  corners.rs  greedy.rs  human.rs  lib.rs  random.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: games.rs  leaderboard.rs  lib.rs  main.rs
src/alphazero/: mcts.rs  mod.rs  nn.rs  shared.rs
src/games/: othello.rs
src/players/: corners.rs  greedy.rs  mod.rs  random.rs
