[package]
name = "alphazero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = {version = "0.13.0", features = ["safetensors"]}
rust_games_shared = { path = "../shared"}

# Need some example games for tests
[dev-dependencies]
rust_games_games = {path = "../games"}

[features]
cuda = ["dfdx/cuda", "rust_games_shared/cuda"]