[package]
name = "alphazero_train"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dfdx = {version = "0.13.0", features = ["safetensors"]}
alphazero = {path = "../alphazero"}
rust_games_shared = {path = "../shared"}
rust_games_games = {path = "../games"}
rust_games_players = {path = "../players"}
rust_games_main = {path = "../main"}
indicatif = "0.17.1"
rand = "0.8.5"
clap = {version = "4.4.4", features = ["derive"]}

[features]
cuda = ["dfdx/cuda", "rust_games_shared/cuda", "rust_games_games/cuda", "rust_games_players/cuda", "rust_games_main/cuda", "alphazero/cuda"]
