[package]
name = "rust_games"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rustlang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
lazy-pbar = "0.2.0"
alphazero = {path = "../alphazero"}
rust_games_shared = {path = "../shared"}
rust_games_games = {path = "../games"}
rust_games_players = {path = "../players"}