[package]
name = "rust_games_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rustlang.org/cargo/reference/manifest.html

[dependencies]
dfdx = "0.13.0"
rand = "0.8.5"
lazy-pbar = "0.2.0"
alphazero = {path = "../alphazero"}
rust_games_shared = {path = "../shared"}
rust_games_games = {path = "../games"}
rust_games_players = {path = "../players"}

[features]
cuda = ["dfdx/cuda", "rust_games_shared/cuda", "rust_games_games/cuda", "rust_games_players/cuda", "alphazero/cuda"]